IEntity Repository, IQueryableRepository and IEntity implementations on Core layer.

--- a/DolphOutFramework.Core/DolphOutFramework.Core.csproj
+++ b/DolphOutFramework.Core/DolphOutFramework.Core.csproj
@@ -41,7 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccess\IEntityRepository.cs" />
+    <Compile Include="DataAccess\IQueryableRepository.cs" />
+    <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
