--- a/DolphOutFramework.Northwind.Entities/DolphOutFramework.Northwind.Entities.csproj
+++ b/DolphOutFramework.Northwind.Entities/DolphOutFramework.Northwind.Entities.csproj
@@ -41,7 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Concrete\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ComplexTypes\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DolphOutFramework.Core\DolphOutFramework.Core.csproj">
+      <Project>{6584CF61-AB28-4ED6-9940-B6141E593B81}</Project>
+      <Name>DolphOutFramework.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
