Adding Complex Type: ProductDetail class and NH and EF implementations. Join operations are handled separately.

--- a/DolphOutFramework.Northwind.Entities/DolphOutFramework.Northwind.Entities.csproj
+++ b/DolphOutFramework.Northwind.Entities/DolphOutFramework.Northwind.Entities.csproj
@@ -41,13 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComplexTypes\ProductDetail.cs" />
     <Compile Include="Concrete\Category.cs" />
     <Compile Include="Concrete\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ComplexTypes\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\DolphOutFramework.Core\DolphOutFramework.Core.csproj">
       <Project>{6584CF61-AB28-4ED6-9940-B6141E593B81}</Project>
