--- a/DolphOutFramework.Northwind.Business/DolphOutFramework.Northwind.Business.csproj
+++ b/DolphOutFramework.Northwind.Business/DolphOutFramework.Northwind.Business.csproj
@@ -41,7 +41,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\IProductService.cs" />
+    <Compile Include="Concrete\Managers\ProductManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\DolphOutFramework.Core\DolphOutFramework.Core.csproj">
+      <Project>{6584CF61-AB28-4ED6-9940-B6141E593B81}</Project>
+      <Name>DolphOutFramework.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DolphOutFramework.Northwind.DataAccess\DolphOutFramework.Northwind.DataAccess.csproj">
+      <Project>{646923F5-C912-4BDA-BF8E-E976470DD1D9}</Project>
+      <Name>DolphOutFramework.Northwind.DataAccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DolphOutFramework.Northwind.Entities\DolphOutFramework.Northwind.Entities.csproj">
+      <Project>{D30C61E8-5A65-4660-9471-063BC82AD822}</Project>
+      <Name>DolphOutFramework.Northwind.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
