--- a/DolphOutFramework.Northwind.Business/DolphOutFramework.Northwind.Business.csproj
+++ b/DolphOutFramework.Northwind.Business/DolphOutFramework.Northwind.Business.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentValidation, Version=6.4.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentValidation.6.4.1\lib\Net45\FluentValidation.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,8 +47,8 @@
     <Compile Include="Abstract\IProductService.cs" />
     <Compile Include="Concrete\Managers\ProductManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidationRules\FluentValidation\ProductValidator.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\DolphOutFramework.Core\DolphOutFramework.Core.csproj">
       <Project>{6584CF61-AB28-4ED6-9940-B6141E593B81}</Project>
@@ -59,6 +62,9 @@
       <Project>{D30C61E8-5A65-4660-9471-063BC82AD822}</Project>
       <Name>DolphOutFramework.Northwind.Entities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
