--- a/DolphOutFramework.Northwind.Business/DolphOutFramework.Northwind.Business.csproj
+++ b/DolphOutFramework.Northwind.Business/DolphOutFramework.Northwind.Business.csproj
@@ -34,6 +34,9 @@
     <Reference Include="FluentValidation, Version=6.4.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentValidation.6.4.1\lib\Net45\FluentValidation.dll</HintPath>
     </Reference>
+    <Reference Include="PostSharp, Version=6.10.8.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
+      <HintPath>..\packages\PostSharp.Redist.6.10.8\lib\net45\PostSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
