Service Module and Channel Factory Implementations has been made. Wcf Service and MvcWeb can work simultaneously.

--- a/DolphOutFramework.Northwind.Business/DolphOutFramework.Northwind.Business.csproj
+++ b/DolphOutFramework.Northwind.Business/DolphOutFramework.Northwind.Business.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Dependency.Resolvers\Ninject\AutoMapperModule.cs" />
     <Compile Include="Dependency.Resolvers\Ninject\BusinessModule.cs" />
     <Compile Include="Dependency.Resolvers\Ninject\InstanceFactory.cs" />
+    <Compile Include="Dependency.Resolvers\Ninject\ServiceModule.cs" />
     <Compile Include="Dependency.Resolvers\Ninject\ValidationModule.cs" />
     <Compile Include="Mappings\AutoMapper\Profiles\BusinessProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
